basic navbar styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,70 @@
-/* #root {
+*{
+  width:100%;
+  height:100%;
+}
+
+#root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+#nav {
+  background-color: #fff;
+  height:75px;
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  margin:auto;
+  width:100%;
+  margin-bottom: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#footer {
+  text-align: center;
+  padding: 1rem;
+  bottom: 0;
+  width: 89.45%;
+  height:50px;
+  margin-bottom: 3rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.nav-link {
+  text-decoration: none;
+  color: #181818;
+  margin-right: 15px;
+  margin-left: 15px;
+  font-weight: bold;  
+  width:fit-content;
+  border-radius: 0 0 8px 8px; 
+	padding:25px 15px;
+  font-size: 25px;
+  border: 1px white solid;
+  border-radius:15px;
 }
 
-.card {
-  padding: 2em;
+.active{
+  background-color: #3d94ff;
 }
 
-.read-the-docs {
-  color: #888;
-} */
+.btn {
+  background-color: #3d94ff;
+  color: #EEEFF2;
+  /* margin: 1rem;
+  margin-left: 0; */
+  padding: 1rem;
+  width: 8rem;
+  border-width: 0;
+  border-radius: 1rem;
+  font-size: 1.2rem;
+}
+
+.btn:hover{
+  background-color: #0471f6;
+}
+
+
+ 
+
