--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,19 @@
-*{
-  width:100%;
-  height:100%;
+* {
+  margin:0;
+  padding:0;
 }
 
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  /*padding: 2rem; */
   text-align: center;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
 #nav {
-  background-color: #fff;
+  /*background-color: #fff;*/
+  padding-top:20px;
   height:75px;
   display:flex;
   justify-content: space-between;
@@ -20,6 +21,8 @@
   margin:auto;
   width:100%;
   margin-bottom: 20px;
+  position:absolute;
+  z-index: 1;
 }
 
 #footer {
@@ -45,6 +48,11 @@
   border-radius:15px;
 }
 
+.nav-link:hover{
+  background-color: #3d94ff;
+
+}
+
 .active{
   background-color: #3d94ff;
 }
@@ -63,6 +71,30 @@
 
 .btn:hover{
   background-color: #0471f6;
+}
+
+.homepage-container {
+  position: relative;
+  width: 100%;
+}
+
+.image-container{
+  width:100%;
+}
+
+.overlay {
+  position: absolute;
+  top: 50%;
+  left:40%;
+  transform: translate(-50%, -50%);
+  text-align: left;
+  width: 40%;
+  color: #FFF;
+}
+
+.description{
+  width:300px;
+  padding:10px;
 }
 
 
