--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,23 @@
 * {
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
 }
 
 #root {
-  /* max-width: 1280px; */
-  margin: 0 auto;
-  /*padding: 2rem; */
   text-align: center;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #nav {
-  /*background-color: #fff;*/
-  padding-top:20px;
-  height:75px;
-  display:flex;
+  padding-top: 20px;
+  height: 75px;
+  display: flex;
   justify-content: space-between;
   align-items: center;
-  margin:auto;
-  width:100%;
+  margin: auto;
+  width: 100%;
   margin-bottom: 20px;
-  position:absolute;
+  position: absolute;
   z-index: 1;
 }
 
@@ -30,7 +26,7 @@
   padding: 1rem;
   bottom: 0;
   width: 89.45%;
-  height:50px;
+  height: 50px;
   margin-bottom: 3rem;
 }
 
@@ -39,18 +35,17 @@
   color: #181818;
   margin-right: 15px;
   margin-left: 15px;
-  font-weight: bold;  
-  width:fit-content;
-  border-radius: 0 0 8px 8px; 
-	padding:25px 15px;
+  font-weight: bold;
+  width: fit-content;
+  border-radius: 0 0 8px 8px;
+  padding: 25px 15px;
   font-size: 25px;
   border: 1px white solid;
-  border-radius:15px;
+  border-radius: 15px;
 }
 
-.nav-link:hover{
+.nav-link:hover {
   background-color: #3d94ff;
-
 }
 
 /* .active{
@@ -59,9 +54,7 @@
 
 .btn {
   background-color: #3d94ff;
-  color: #EEEFF2;
-  /* margin: 1rem;
-  margin-left: 0; */
+  color: #eeeff2;
   padding: 1rem;
   width: 8rem;
   border-width: 0;
@@ -69,7 +62,7 @@
   font-size: 1.2rem;
 }
 
-.btn:hover{
+.btn:hover {
   background-color: #0471f6;
 }
 
@@ -78,107 +71,109 @@
   width: 100%;
 }
 
-.image-container{
-  width:100%;
+.image-container {
+  width: 100%;
 }
 
 .overlay {
   position: absolute;
   top: 50%;
-  left:40%;
+  left: 40%;
   transform: translate(-50%, -50%);
   text-align: left;
   width: 40%;
-  color: #FFF;
+  color: #fff;
 }
 
-.description{
-  width:300px;
-  padding:10px;
+.description {
+  width: 300px;
+  padding: 10px;
 }
 
-#register-page{
-  display:flex;
+#register-page {
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
   width: 100%;
-  height:100vh;
+  height: 100vh;
 }
 
-
-#tourist-register-form{
-  width:40%;
-  display:flex;
-  flex-direction:column;
-  justify-content:space-between;
-  align-items:center;
-  border-radius:10px;
-  border: 1px solid grey;
-  margin-bottom:70px;
-  padding: 50px;
-  margin-top: 35px;
-  
-}
-
-#register-page{
-  display:flex;
+#tourist-register-form {
+  width: 40%;
+  display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  position: relative;
-  width: 100%;
-  height:100vh;
-}
-
-
-#tourist-register-form{
-  width:40%;
-  display:flex;
-  flex-direction:column;
-  justify-content:space-between;
-  align-items:center;
-  border-radius:10px;
+  border-radius: 10px;
   border: 1px solid grey;
-  margin-bottom:70px;
+  margin-bottom: 70px;
   padding: 50px;
   margin-top: 35px;
-  
-}
-
-#tourist-navbar {
-  background-color: white;
 }
 
 .touristWrapper {
-  background-color: #5228F5;
-  padding: 50px;
-  /* margin-top: 10px; */
-  height: 60px;
+  background-color: #5228f5;
+  padding: 20px;
+  height: 50px;
 }
-
 .tourist-header {
   background-color: white;
-  height: 100%;
-  padding: 20px;
+  height: 35%;
+  padding: 15px;
   border-radius: 50px;
   display: flex;
-  justify-content: center; 
-  align-items: center;     
+  align-items: center;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 .brand {
-  font-size: 1.5em; 
+  font-size: 1.7em;
   margin-right: 20px;
+}
+
+.tourist-nav{
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+#link-navbar {
+  background-color: white;
+  max-width: 70%;
+  padding: 0;
+  box-sizing: border-box;
+  max-height: 75%;
 }
 
 .links {
   display: flex;
-  gap: 20px;
+  gap: 60px;
+  max-width: calc(100% - 30px);
 }
 
 .links a {
   text-decoration: none;
-  color: #000; 
+  color: #000;
 }
+
+
+
+.logout-button {
+  margin-left: 20%;
+  max-height: 10%;
+}
+
+.logout-button a {
+  text-decoration: none;
+  color: #000;
+  padding: 8px; 
+  border-radius: 20px;
+  border: 1px solid #5228f5;
+  
+}
+
