--- a/src/pages/TouristHomePage/index.css
+++ b/src/pages/TouristHomePage/index.css
@@ -1,61 +1,98 @@
 #topContainer {
-    background-color: #5228f5;
-    height: 100vh;
-  }
-  
-  #headerContainer {
-    background-color: #5228f5;
-    
-  }
-  
-  #centeredContainer {
-    background-color: #5228f5;
-    
-    text-align: center; 
-    padding: 20px; 
-
-  }
-
-  h1{
-    max-width: 800px;
-    font-size: 1.6em; 
-    color: antiquewhite;
-  }
-
-
-  
-.form{
-    display: flex;
-    justify-content: center;
+  background-color: #5228f5;
+  height: 100vh;
 }
 
-.fa-search{
-    position: absolute;
-    top:20px;
-    left: 13px;
-    color: #9ca3af;
-    
+#headerContainer {
+  background-color: #5228f5;
 
 }
 
-.input{
+#centeredContainer {
+  background-color: #5228f5;
 
-    height: 55px;
-    text-indent: 33px;
-    border-radius: 10px;
-    width: 650px; 
+  text-align: center;
+  padding: 20px;
+
+}
+
+h1 {
+  max-width: 800px;
+  font-size: 1.6em;
+  color: antiquewhite;
+}
+
+
+
+.form {
+  display: flex;
+  justify-content: center;
+}
+
+.fa-search {
+  position: absolute;
+  top: 20px;
+  left: 13px;
+  color: #9ca3af;
 
 
 }
 
-.input:focus{
-    box-shadow: 0 0 20px #1E90FF;
-     outline: none;
-     border: #17a2b8 solid 2px;
- 
+.input {
+
+  height: 55px;
+  text-indent: 33px;
+  border-radius: 10px;
+  width: 650px;
+
+
 }
 
-.search-bar{
+.input:focus {
+  box-shadow: 0 0 20px #1E90FF;
+  outline: none;
+  border: #17a2b8 solid 2px;
+
+}
+
+.search-bar {
   width: 650px;
   position: relative;
+}
+
+.searches{
+  position:absolute;
+}
+
+.search-result {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  text-align: left;
+  position: relative;
+  right: 30px;
+  z-index: 1000;
+  background-color: white;
+  width: 100vw;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding-left: 2vw;
+  width: 650px;
+
+}
+
+.search-result-icon {
+  margin-right: 10px;
+
+}
+
+.search-result-text {
+  flex: 1;
+  margin-left: 20px;
+  padding: 10px;
+}
+
+
+
+.search-result:hover {
+  background-color: gainsboro;
 }
