--- a/src/pages/TouristHomePage/index.css
+++ b/src/pages/TouristHomePage/index.css
@@ -5,6 +5,11 @@
 
 #headerContainer {
   background-color: #5228f5;
+   display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+
 
 }
 
@@ -90,4 +95,40 @@ h1 {
 
 .search-result:hover {
   background-color: gainsboro;
+}
+
+.filters-section{
+  width: 80vw;
+  border: 2px solid white;
+    text-align: left;
+}
+
+.filter-container{
+  display: flex; 
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 1em;
+  color: white;
+
+}
+
+.filter{
+  padding: 1em;
+  border: 1px solid white;
+  margin: 10px;
+  border-radius: 50px;
+  transition: 0.1s ease-in-out;
+
+}
+
+.filter:hover{
+  cursor: pointer;
+  background-color: white;
+  color: black;
+  box-shadow: 0 0 10px white;
+}
+
+.filter.selected{
+  background-color: white;
+  color: black;
 }
