--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+
+
 * {
   margin:0;
   padding:0;
+  font-family: Raleway;
 }
 
 #root {
