--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+body {
+  background-color: white;
+  margin: 0;
+  padding: 0;
+  font-family: 'Your Preferred Font', sans-serif; /* Replace with your preferred font */
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -25,9 +32,13 @@
   text-align: center;
   padding: 1rem;
   bottom: 0;
-  width: 89.45%;
+  
   height: 50px;
-  margin-bottom: 3rem;
+  background-color: #000;
+}
+
+#footer p{
+  color: #fff;
 }
 
 .nav-link {
@@ -47,10 +58,6 @@
 .nav-link:hover {
   background-color: #3d94ff;
 }
-
-/* .active{
-  background-color: #3d94ff;
-} */
 
 .btn {
   background-color: #3d94ff;
@@ -143,6 +150,11 @@
 }
 
 #link-navbar {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
   background-color: white;
   max-width: 70%;
   padding: 0;
@@ -177,3 +189,26 @@
   
 }
 
+@media (max-width: 600px) {
+  .tourist-header {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .brand {
+    margin-bottom: 10px; /* Add spacing between brand and links */
+  }
+
+  .tourist-nav {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .links {
+    gap: 10px;
+  }
+
+  .logout-button {
+    margin-top: 10px; /* Add spacing between links and logout button */
+  }
+}
