--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   /* max-width: 1280px; */
   margin: 0 auto;
   /*padding: 2rem; */
-  text-align: center;
+  /* text-align: center; */
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
