--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,8 @@
   margin: 0 auto;
   /*padding: 2rem; */
   /* text-align: center; */
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+  /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif */
+}
 
 #nav {
   padding-top: 20px;
