--- a/src/pages/TouristGuidePage/index.css
+++ b/src/pages/TouristGuidePage/index.css
@@ -1,7 +1,28 @@
-.your-guides{
+.your-guides {
   padding: 2em;
 }
 
-.results{
+.results {
   margin-top: 5em;
+  display: flex;
+}
+
+.guides {
+  background-color: #f2f2f2;
+  padding: 2%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  border-radius: 10px;
+  width: 70%;
+  flex: 1;
+}
+
+.activities {
+  width: 30%;
+  background-color: #f2f2f2;
+  margin-left: 35px;
+  padding: 2%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  border-radius: 10px;
 }
