--- a/src/pages/TouristGuidePage/index.css
+++ b/src/pages/TouristGuidePage/index.css
@@ -7,14 +7,19 @@
   display: flex;
 }
 
+
+.two-thirds{
+  width: 100%; 
+  flex: 1;
+}
 .guides {
   background-color: #f2f2f2;
   padding: 2%;
   padding-top: 2%;
   padding-bottom: 2%;
   border-radius: 10px;
-  width: 70%;
-  flex: 1;
+  /* width: 100%; */
+  /* flex: 1; */
 }
 
 .activities {
