--- a/src/components/GuideCard/index.css
+++ b/src/components/GuideCard/index.css
@@ -31,5 +31,52 @@
 
 .guide-info-section {
     font-size: x-large;
+    width: 50%;
     margin-left: 3em;
+    padding-right: 3em;
+}
+
+.guide-contact{
+    font-size: x-large;
+    border: 2px solid brown;
+    width: 20%;
+}
+
+.guide-chat-title{
+    margin-bottom: 2em;
+}
+
+.chat-icon{
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px;
+    height: 60px;
+    border-radius: 15px;
+    border: 2px solid gainsboro;
+    transition: 0.2s ease-in-out ;
+
+}
+
+.chat-icon:hover{
+    cursor: pointer;
+    animation: shake 0.5s ease-in-out;
+}
+
+
+
+@keyframes shake {
+    0%, 100% {
+        transform: rotate(0deg);
+    }
+    25%, 75% {
+        transform: rotate(-10deg);
+    }
+    50% {
+        transform: rotate(10deg);
+    }
+}
+.fa-comment{
+    color: white;
 }
