add create or remove to guide page

--- a/src/components/GuideCard/index.css
+++ b/src/components/GuideCard/index.css
@@ -77,6 +77,12 @@
         transform: rotate(10deg);
     }
 }
-.fa-comment{
+
+
+.chat-icon{
     color: white;
+}
+
+.chat-icon.gold{
+    color: gold;
 }
