--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   background-color: white;
   margin: 0;
   padding: 0;
-  font-family: 'Your Preferred Font', sans-serif; /* Replace with your preferred font */
+  font-family: 'Your Preferred Font', sans-serif; 
 }
 
 * {
