--- a/src/pages/TouristHomePage/index.css
+++ b/src/pages/TouristHomePage/index.css
@@ -7,24 +7,24 @@
 #headerContainer {
   background-color: #5228f5;
   height: -15vh;
-}
-
-#centeredContainer {
-  background-color: #5228f5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  padding: 20px;
 }
 
 #headerContainer h1 {
   font-size: 4em;
   color: white;
-  max-height: 80%;
-  padding: 5%;
+  max-height: 50%;
+  padding: 4%;
 }
 
-.Sub-Head h1 {
+#headerContainer .sub-heading {
   font-size: 1.8em;
   color: white;
+  text-align: center;
 }
 
 /* Details Section */
