--- a/src/App.css
+++ b/src/App.css
@@ -190,6 +190,19 @@
   
 }
 
+
+@keyframes shake {
+    0%, 100% {
+        transform: rotate(0deg);
+    }
+    25%, 75% {
+        transform: rotate(-10deg);
+    }
+    50% {
+        transform: rotate(10deg);
+    }
+}
+
 @media (max-width: 600px) {
   .tourist-header {
     flex-direction: column;
