--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -5,6 +5,16 @@
     grid-template-rows: 14vh 60vh 13vh;
 }
 
+img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-left: 20px;
+}
+
+.time {
+    font-size: 75%;
+}
 .chat-header {
     padding: 1rem 1rem 0rem 1rem;
     display: flex;
@@ -19,13 +29,29 @@
     overflow: scroll;
 }
 
+.extra {
+    display: flex;
+    line-height: 1.2;
+    width: fit-content;
+    flex-direction: column;
+    align-self: flex-end;
+    font-size: 10px;
+    text-align: right;
+}
+
+.extra2{
+    display: flex;
+    line-height: 1.2;
+    width: fit-content;
+    flex-direction: column;
+    font-size: 10px
+}
+
 .message {
 
-  background: var(--buttonBg);
-  background: linear-gradient(98.63deg, #24e4f0 0%, #90EE90
-  100%);
+  background:#90EE90;
   padding: 0.7rem;
-  border-radius: 1rem 1rem 0 1rem ;
+  border-radius: 1rem 1rem 1rem 0;
   max-width: 28rem;
   width: fit-content;
   display: flex;
@@ -42,7 +68,7 @@
 .own {
   align-self: flex-end;
   border-radius: 1rem 1rem 0 1rem;
-  background: linear-gradient(98.63deg, #24e4f0 0%, #358ff9 100%);
+  background: #358ff9;
 }
 
 
