--- a/src/pages/GuideHomePage/index.css
+++ b/src/pages/GuideHomePage/index.css
@@ -1,6 +1,6 @@
 #topContainer {
     background-color: #5228f5;
-    height: 100vh;
+    height: 42vh;
   }
   
   #headerContainer button {
@@ -81,7 +81,7 @@
   flex: 1;
   display: flex;
   background-color: #f2dedaff;
-  height: 82vh;
+  height: 55vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -140,7 +140,7 @@
   display: flex;
   flex-direction: column;
   background-color: white;
-  height: 98vh;
+  height: 80vh;
 }
 
 #Gallery1 {
@@ -176,19 +176,19 @@
 #FAQ {
   flex: 1;
   display: flex;
-  background-color: white;
-  height: 46vh;
+  background-color: #5228f5;
+  height: 69vh;
 }
 
 #FAQ1 {
-  background-color: white;
+  background-color: #5228f5;
   color: black;
   padding: 20px;
   width: 30%; /* Adjust as needed */
 }
 
 #FAQ2 {
-  background-color: white;
+  background-color: #5228f5;
   color: black;
   padding: 20px;
   width: 70%; /* Adjust as needed */
