--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,12 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  /* background-color: #5228f5; */
+  background-image: url('./assets/backImage.jpg');
+  color: white;
+  
+  
+ 
 }
 
 #tourist-register-form {
@@ -127,6 +133,8 @@
   margin-bottom: 70px;
   padding: 50px;
   margin-top: 35px;
+  background-color: #5228f5;
+  box-shadow: 14px 14px 20px rgba(54, 54, 54, 0.376)
 }
 
 .touristWrapper {
@@ -257,6 +265,8 @@
   font-size: 20px;
   border:#0471f6 2px solid;
   width:202px;
+  background-color: #5228f5;
+  color: white;
 
 
 }
