add nice bg image to sign/log

--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@
   padding: 50px;
   margin-top: 35px;
   background-color: #5228f5;
-  box-shadow: 14px 14px 20px rgba(54, 54, 54, 0.376)
+  box-shadow: 14px 14px 20px rgba(54, 54, 54, 0.376);
 }
 
 .touristWrapper {
