--- a/src/pages/TouristHomePage/index.css
+++ b/src/pages/TouristHomePage/index.css
@@ -21,7 +21,7 @@
   padding: 4%;
 }
 
-#headerContainer .sub-heading {
+#headerContainer sub-heading {
   font-size: 1.8em;
   color: white;
   text-align: center;
