--- a/src/pages/TouristHomePage/index.css
+++ b/src/pages/TouristHomePage/index.css
@@ -1,17 +1,20 @@
 /* TopContainer */
 #topContainer {
   background-color: #5228f5;
-  height: 82vh;
+  min-height: 70vh;
 }
 
 #headerContainer {
   background-color: #5228f5;
-  height: -15vh;
+  height: 40vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   text-align: center;
+  font-weight: bold;
+  color: white;
+  padding-top: 10em;
 }
 
 #headerContainer h1 {
@@ -21,10 +24,11 @@
   padding: 4%;
 }
 
-#headerContainer sub-heading {
-  font-size: 1.8em;
+ .sub-heading {
   color: white;
   text-align: center;
+  padding-top: 2em;
+  padding-bottom: 1em;
 }
 
 /* Details Section */
@@ -35,6 +39,8 @@
   background-color: white;
   height: 60vh;
 }
+
+
 
 #Details1 {
   display: flex;
@@ -48,8 +54,8 @@
 #DetailsText {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */ /* Remove this line */
-  align-items: flex-start; /* Add this line */
+  justify-content: center;
+ 
 }
 
 #Details1 h1 {
@@ -73,7 +79,7 @@
 
 #img1 {
   border-radius: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
   width: 60%;
   margin-left: auto;
 }
@@ -82,10 +88,11 @@
   float: left;
   margin-left: 300px;
   margin-top: 75px;
-  width: 200px;
-  height: 200px;
+  width: 300px;
+  height: 300px;
   border-radius: 100%;
   overflow: hidden;
+  object-fit: cover;
 }
 
 /* Features */
@@ -93,36 +100,23 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  background-color: #f0f1f2ff;
-  height: 82vh;
+  min-height: 100vh;
+  padding: 0 5em;
 }
 
-#Features1 {
-  background-color: #f0f1f2ff;
+/* #Features1 {
+  background-color: gray;
   color: black;
   padding: 20px;
+} */
+
+
+#Features1{
+  display: flex; 
+  align-items: center;
+  flex-direction: column;
 }
 
-#Features1 h1 {
-  font-size: 0.5em;
-  margin: 0;
-  padding: 1px;
-  color: #5228f5;
-}
-
-#Features1 h2 {
-  font-size: 2.5em;
-  margin: 0;
-  padding: 2px;
-  color: black;
-}
-
-#Features1 p {
-  font-size: 0.5em;
-  margin: 0;
-  padding: 1px;
-  color: #595959ff;
-}
 
 .feature-box-container {
   display: flex;
@@ -135,10 +129,17 @@
   width: 48%;
   background-color: white;
   color: black;
-  padding: 10px;
   margin-bottom: 20px;
   border: 1px solid #ddd;
   border-radius: 8px;
+  position: relative;
+  height: 150px; 
+
+}
+
+.fa-cube{
+  position: absolute;
+  top:20px;
 }
 
 /* Gallery */
@@ -153,30 +154,36 @@
 #Gallery1 {
   background-color: white;
   color: black;
-  padding: 20px;
+
+}
+
+.gallery-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: center;
 }
 
 .gallery-grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr); /* 4 columns */
-  gap: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  max-width: 800px; /* Set a maximum width for the gallery if needed */
 }
 
-.gallery-item {
-  border-radius: 10px; /* Adjust the radius as needed */
-  overflow: hidden;
+.gallery-photo-card {
+  flex: 0 0 45%; /* Adjust the width of each item as needed */
+  margin: 10px; /* Adjust the margin between items as needed */
+    width: 250px;
+  height: 300px;
 }
 
-.gallery-item img {
-  width: 30%;
+.gallery-photo-card img {
+  width: 100%;
   height: 100%;
+  max-width: 100%; 
+  max-height: 100%; 
   object-fit: cover;
-  border-radius: 10px; /* Same as the border-radius of .gallery-item */
+  display: block;
 }
-
 
 /* Booking */
 #Booking {
@@ -184,7 +191,8 @@
   display: flex;
   flex-direction: column;
   background-color: black;
-  height: 35vh;
+  min-height: 35vh;
+  margin-top: 10vh;
 }
 
 #Booking1 {
@@ -231,7 +239,7 @@
   width: 70%; /* Adjust as needed */
    display: flex;
   flex-direction: column;
-  /* justify-content: center; */
+
   align-items: center;
 
 
