--- a/src/pages/TouristAllPlacesPage/index.css
+++ b/src/pages/TouristAllPlacesPage/index.css
@@ -6,21 +6,40 @@
     display: flex;
     flex-direction: row;
     border-radius: 10px;
-    background-color: #dddddd;
+    background-color: #efefef;
      transition: 0.1s ease-in-out;
      overflow: hidden;
-     width: 1000px; 
+     width: 1300px; 
+       transition: 0.5s ease-in-out;
+
 }
 
-.search-card img{
-    width: 50vw !important;
+.placeImage{
+    width: 400px;
     height: 200px;
+    transition: 0.5s ease-in-out;
+}
+
+.placeImage img{
+      width: 100%;
+  height: 100%;
+  max-width: 100%; /* Ensures the image won't exceed the width of the parent container */
+  max-height: 100%; /* Ensures the image won't exceed the height of the parent container */
+  object-fit: cover;
+  /* display: block; */
+}
+
+
+
+/* .search-card img{
+   
+
     object-fit: cover;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
      transition: 0.3s ease-in-out;
      overflow: hidden;
-}
+} */
 
 .search-card:hover img{
     transform: scale(1.04); 
@@ -31,6 +50,7 @@
 .search-card:hover{
      filter: brightness(0.8);
      cursor: pointer;
+     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .search-card-info{
@@ -64,4 +84,9 @@
     width: 70%;
     border: 4px solid green;
     padding-top: 3em;
+}
+
+.search-card-info{
+
+    max-width: 800px;
 }
