--- a/src/pages/TouristGuidePage/SearchedGuides.css
+++ b/src/pages/TouristGuidePage/SearchedGuides.css
@@ -18,6 +18,7 @@
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
     cursor: pointer;
     transform: scale(1.05);
+    background-color: #e2e2e2;
 }
 
 .guide-card img {
