--- a/src/components/ImageCarousel/index.css
+++ b/src/components/ImageCarousel/index.css
@@ -3,8 +3,10 @@
 .carousel {
     position: sticky;
     top: 0;
-    border: 2px solid gold;
+    border: 2px solid white;
+    border-radius: 5px;
   
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1)
 }
 
 .carousel-item{
