--- a/src/pages/CreatePlanPage/index.css
+++ b/src/pages/CreatePlanPage/index.css
@@ -5,6 +5,7 @@
     padding: 2em;
     display: flex;
     flex-direction: row;
+
 }
 
 .plan-guide-info{
@@ -16,8 +17,16 @@
 .create-plan-form-section{
     width: 65%; 
     margin-left: 2em;
+    background-color: #f2f2f2;
+    /* padding:2em; */
 }
 
 .create-form{
     margin-top: 2em;
+}
+.time-section{
+    display: flex; 
+    flex-direction:  row;
+    padding:2em;
+       /* background-color: #5228f5; */
 }
